# b3d_paws_bakery

./: .env.example  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tasks.py
.github/: FUNDING.yml
.github/actions/blender-extension-build/: action.yml  script.sh
.github/workflows/: commit.yml  extension_build.yml  extension_test.yml  gh-release.yml  lint.yml  release.yml  release_branch.yml
docs/: requirements.txt
docs/source/: api.rst  api.rst.bak  automatic_material_creation.md  bake_settings.md  conf.py  high_to_low.md  index.md  index.rst  preferences.md  quick_start.md  quick_start.rst.bak  test.rst  test.rst.bak  texture_import.md  texture_types.md
docs/source/_static/: custom.css
docs/source/dev/: changelog.md  contributing.md  feature_request.md  help_me.md
src/paws_bakery/: __init__.py  _helpers.py  blender_manifest.toml  common.py  enums.py  icons.py  preferences.py  props.py  props_enums.py  utils.py
src/paws_bakery/assets/: blender_assets.cats.txt  materials.blend
src/paws_bakery/operators/: __init__.py  _utils.py  bake.py  bake_common.py  bake_job.py  bake_manager.py  bake_selected.py  debug.py  material_setup.py  randomize_color.py  texture_import.py  texture_set.py  texture_set_bake.py  texture_set_material_create.py  texture_set_mesh.py  texture_set_texture.py  texture_set_texture_bake.py
src/paws_bakery/preferences/: __init__.py  defaults.py  props.py
src/paws_bakery/ui/: __init__.py  _draw_bake_settings.py  _utils.py  debug.py  settings.py  simple_bake.py
src/paws_bakery/ui/helpers/: __init__.py  main.py  materials.py  objects_color.py  texture_import.py
src/paws_bakery/ui/texture_set/: __init__.py  main.py  mesh.py  texture.py
tests/: test_enums.py  test_uniq_bl_idname.py
tests/test_bl/: .gitignore  bl_script.py  test_01.blend  test_regression.py
