[metadata]
name = paws_bakery
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
  =src

install_requires =

[options.extras_require]
dev =
  bpy >= 4.4.0
  fake-bpy-module-latest >= 4.4
  mypy >= 0.790
  black >= 20.8b1
  flake8 >= 6.1.0
  flake8-bugbear >= 23.9.16
  pylint[spelling] >= 3.0.3
  isort >= 5.6.4
  pytest >= 6.1.2
  pytest-cov >= 2.10.1
  pytest-mock >= 3.3.1
  # types-python-dateutil >= 2.8.17

; [options.packages.find]
; where = src

[options.package_data]
* = py.typed

[mypy]
check_untyped_defs = True
no_implicit_optional = True
strict = True
pretty = True
plugins =

disallow_any_generics = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = true
warn_return_any = True
explicit_override = True

[isort]
profile = black
src_paths = src,tests


[flake8]
max-line-length = 88
extend-ignore =
  E203
  E501
  #conflicts with blender attribute type annotations
  F722
  #conflicts with blender attribute type annotations
  # F821
extend-select = B9

# WARN: require-plugins doesn't throw error in vscode
# require-plugins =
#   flake8-bugbear
#   non-existent-plugin

[pylint]
max-line-length = 88
generated-member=
  bpy.ops.pawsbkr
  mathutils.Vector
disable=
  assignment-from-no-return,
  too-few-public-methods,
